# chamgei

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SKILLS.md  index.html  install.sh  package.json
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/chamgei-audio/: Cargo.toml
crates/chamgei-audio/src/: lib.rs
crates/chamgei-core/: Cargo.toml
crates/chamgei-core/src/: command_mode.rs  context.rs  corrections.rs  dictionary.rs  history.rs  lib.rs  main.rs  onboarding.rs  prompts.rs  snippets.rs  stats.rs  status.rs
crates/chamgei-hotkey/: Cargo.toml
crates/chamgei-hotkey/src/: lib.rs
crates/chamgei-inject/: Cargo.toml
crates/chamgei-inject/src/: lib.rs
crates/chamgei-llm/: Cargo.toml
crates/chamgei-llm/src/: lib.rs
crates/chamgei-stt/: Cargo.toml
crates/chamgei-stt/src/: lib.rs
crates/rekody-audio/: Cargo.toml
crates/rekody-audio/src/: lib.rs
crates/rekody-core/: Cargo.toml
crates/rekody-core/src/: command_mode.rs  context.rs  corrections.rs  dictionary.rs  history.rs  history_tui.rs  lib.rs  main.rs  onboarding.rs  prompts.rs  snippets.rs  stats.rs  status.rs  ui.rs
crates/rekody-hotkey/: Cargo.toml
crates/rekody-hotkey/src/: lib.rs
crates/rekody-hotkey/tests/: accessibility.rs
crates/rekody-inject/: Cargo.toml
crates/rekody-inject/src/: lib.rs
crates/rekody-llm/: Cargo.toml
crates/rekody-llm/src/: lib.rs
crates/rekody-stt/: Cargo.toml
crates/rekody-stt/src/: lib.rs
crates/rekody-stt/tests/: short_audio_smoke.rs
docs/: onboarding-spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
website/: .gitignore  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json
website/public/: install.sh
website/src/components/: Demo.astro  Faq.astro  Features.astro  Footer.astro  Hero.astro  InstallSection.astro  LegalPage.astro  Mark.astro  Navbar.astro  OpenSource.astro  PrivacyBlock.astro  SocialProof.astro  SttTable.astro  UseCases.astro
website/src/layouts/: Base.astro
website/src/lib/: version.ts
website/src/pages/: data-controls.astro  open-source.astro  privacy.astro  security.astro  subprocessors.astro  terms.astro  use-cases.astro
website/src/styles/: global.css
