[package]
name = "chamgei-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
chamgei-core.workspace = true

[lib]
name = "chamgei_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chamgei-tauri"
path = "src/main.rs"
