[package]
name = "chamgei-core"
description = "Pipeline orchestration for Chamgei voice dictation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chamgei-audio = { workspace = true }
chamgei-stt = { workspace = true }
chamgei-llm = { workspace = true }
chamgei-inject = { workspace = true }
chamgei-hotkey = { workspace = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs = "6"

[[bin]]
name = "chamgei"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
