[package]
name = "chamgei-llm"
description = "LLM post-processing providers for Chamgei (Groq, Cerebras, local)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
