[package]
name = "rekody-audio"
description = "Audio capture, resampling, and VAD for rekody"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cpal = "0.15"
rubato = "0.16"
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
