[package]
name = "rekody-hotkey"
description = "Global hotkey listener for rekody"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# No platform-specific crate deps needed — all macOS APIs used via raw FFI.
