[package]
name = "rekody-inject"
description = "Cross-platform text injection for rekody"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arboard = "3"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }
